# cpp-rp2040-template

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt
executable/src/: main.cpp
firmware/include/: main.hpp
firmware/src/: main.cpp
scripts/: compile.sh  format.sh  upload.sh
